--- a/config/controller2/floodlight/src/main/resources/floodlightdefault.properties
+++ b/config/controller2/floodlight/src/main/resources/floodlightdefault.properties
@@ -20,6 +20,7 @@ net.floodlightcontroller.forwarding.Forwarding.match=vlan, mac, ip, transport
 net.floodlightcontroller.forwarding.Forwarding.flood-arp=NO
 net.floodlightcontroller.core.internal.FloodlightProvider.openFlowPort=6656
 net.floodlightcontroller.core.internal.FloodlightProvider.role=ACTIVE
+net.floodlightcontroller.core.internal.OFSwitchManager.supportedOpenFlowVersions=1.0, 1.3
 net.floodlightcontroller.restserver.RestApiServer.keyStorePath=/path/to/your/keystore-file.jks
 net.floodlightcontroller.restserver.RestApiServer.keyStorePassword=your-keystore-password
 net.floodlightcontroller.restserver.RestApiServer.httpsNeedClientAuthentication=NO
